--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Travel</string>
+    <string name="app_name">TravelMantics</string>
     <string name="title_hint">Deal Title</string>
     <string name="price_hint">Price (numbers only)</string>
     <string name="description_hint">Description</string>
